[package]
name = "tt"
version = "0.1.2"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.33", features = ["cargo", "wrap_help", "derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"

